<resources>
    <string name="app_name">Staff Locator</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions.
    </string>
    <string name="Help">Help</string>
    <string name="title_activity_select_location">select_location</string>
    <string name="current_location">Current Location</string>
    <string name="action_settings">Settings</string>
    <string name="demo_view">Not selected</string>
    <string name="change_address">Change Place</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="name">Name</string>
    <string name="set_time">Set Time</string>
    <string name="change_time">Change Time</string>
    <string name="eta_office">ETA to Office</string>
    <string name="ins_loc">Insert your location</string>
    <string name="selectDate">Select a Date(optional)</string>


</resources>
